# axum-rest

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  renovate.yml
migrations/: 20220205185921_user.down.sql  20220205185921_user.up.sql
nginx/: Dockerfile  nginx.conf
src/: main.rs
