[package]
name = "demo-axum-gql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
axum = "0.4.5"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
anyhow = "1.0.53"
dotenv = "0.15.0"
