[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
axum = "0.4.8"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
anyhow = "1.0.56"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }
